syntax = "proto3";

package notification;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_outer_classname = "NotificationProto";
option java_package = "example.urlshortner.notification.grpc";

enum NotificationType {
  NEWURL = 0;
  TRESHOLD = 1;
  NEWUSER = 2;
}

enum NotificationStatus {
  SUCCESS = 0;
  PENDING = 1;
  FAILURE = 2;
}

message NotificationRequest {
  NotificationType notificationType = 1;
  string message = 2;
  optional string shortCode = 3;
  optional int64 userId = 4;
}

message NotificationReply {
  bool success = 1;
  string message = 2;
  NotificationStatus notificationStatus = 3;
}

message Notification {
  int64 id = 1;
  optional string short_code = 2;
  optional int64 userId = 3;
  NotificationType notificationType = 4;
  NotificationStatus notificationStatus = 5;
  string message = 6;
}

message GetNotificationsResponse {
  repeated Notification notifications = 1;
}

service NotificationService {
  rpc notify(NotificationRequest) returns (NotificationReply);
  rpc getNotifications(google.protobuf.Empty) returns (GetNotificationsResponse);
}
